// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Button All 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm sc-hKgILt iUmXRz bOlbef"
>
  <div
    className="sc-bdfBwQ sc-dlfnbm sc-eCssSg jqYRjY bOlbef iSkCFP"
  >
    <span
      className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  iNtkGE"
    >
      Primary
    </span>
    <button
      className="sc-gsTCUz dSfObb"
    >
      Click
    </button>
    <span
      className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  iNtkGE"
    >
      Outline
    </span>
    <button
      className="sc-gsTCUz BdvQD"
    >
      Click
    </button>
    <span
      className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  iNtkGE"
    >
      Success
    </span>
    <button
      className="sc-gsTCUz rKBpE"
    >
      Click
    </button>
    <span
      className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  iNtkGE"
    >
      Warning
    </span>
    <button
      className="sc-gsTCUz clkexh"
    >
      Click
    </button>
    <span
      className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  iNtkGE"
    >
      Error
    </span>
    <button
      className="sc-gsTCUz dyXyPT"
    >
      Click
    </button>
    <span
      className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  iNtkGE"
    >
      Disabled
    </span>
    <button
      className="sc-gsTCUz dSfObb"
      disabled={true}
    >
      Click
    </button>
  </div>
</div>
`;

exports[`Storyshots Atoms/Layout/Container Container 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm sc-hKgILt iUmXRz bOlbef"
>
  <div
    className="sc-bdfBwQ sc-dlfnbm sc-hKgILt hdcUfF bOlbef"
    height="100vh"
  >
    This is the content of a container component
  </div>
</div>
`;

exports[`Storyshots Atoms/Layout/Grid Grid 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm sc-hKgILt iUmXRz bOlbef"
>
  <div
    className="sc-bdfBwQ sc-dlfnbm sc-eCssSg  bOlbef hPHjUY"
  >
    <div
      className="sc-bdfBwQ sc-dlfnbm sc-eCssSg  bOlbef irmrKA"
    >
      <div
        className="sc-bdfBwQ sc-dlfnbm kTMdFs bOlbef"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm kTMdFs bOlbef"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm kTMdFs bOlbef"
        height={150}
      />
    </div>
    <div
      className="sc-bdfBwQ sc-dlfnbm sc-eCssSg  bOlbef kHcZxb"
    >
      <div
        className="sc-bdfBwQ sc-dlfnbm kTMdFs bOlbef"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm kTMdFs bOlbef"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm kTMdFs bOlbef"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm kTMdFs bOlbef"
        height={150}
      />
    </div>
    <div
      className="sc-bdfBwQ sc-dlfnbm sc-eCssSg  bOlbef hYmPLl"
    >
      <div
        className="sc-bdfBwQ sc-dlfnbm kTMdFs bOlbef"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm kTMdFs bOlbef"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm kTMdFs bOlbef"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm kTMdFs bOlbef"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm kTMdFs bOlbef"
        height={150}
      />
      <div
        className="sc-bdfBwQ sc-dlfnbm kTMdFs bOlbef"
        height={150}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Typography/Heading Heading 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm sc-hKgILt iUmXRz bOlbef"
>
  <div
    className="sc-bdfBwQ sc-dlfnbm  bOlbef"
  >
    <div
      className="sc-bdfBwQ sc-dlfnbm  bOlbef"
    >
      <span
        className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  jJYlhf cqWbzA"
      >
        H1 - 3rem - bold
      </span>
      <h1
        className="sc-bdfBwQ sc-jSgupP sc-gKsewC eRydby jJYlhf fokXVk"
        color="text.primary"
      >
        Mountain UI library
      </h1>
    </div>
    <div
      className="sc-bdfBwQ sc-dlfnbm  bOlbef"
    >
      <span
        className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  jJYlhf cqWbzA"
      >
        H2 - 2.5rem - bold
      </span>
      <h2
        className="sc-bdfBwQ sc-jSgupP sc-gKsewC eRydby jJYlhf gEEOzO"
        color="text.primary"
      >
        Mountain UI library
      </h2>
    </div>
    <div
      className="sc-bdfBwQ sc-dlfnbm  bOlbef"
    >
      <span
        className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  jJYlhf cqWbzA"
      >
        H3 - 2.1rem - bold
      </span>
      <h3
        className="sc-bdfBwQ sc-jSgupP sc-gKsewC eRydby jJYlhf hBHcFm"
        color="text.primary"
      >
        Mountain UI library
      </h3>
    </div>
    <div
      className="sc-bdfBwQ sc-dlfnbm  bOlbef"
    >
      <span
        className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  jJYlhf cqWbzA"
      >
        H4 - 1.7rem - bold
      </span>
      <h4
        className="sc-bdfBwQ sc-jSgupP sc-gKsewC eRydby jJYlhf biefaF"
        color="text.primary"
      >
        Mountain UI library
      </h4>
    </div>
    <div
      className="sc-bdfBwQ sc-dlfnbm  bOlbef"
    >
      <span
        className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  jJYlhf cqWbzA"
      >
        H5 - 1.4rem - bold
      </span>
      <h5
        className="sc-bdfBwQ sc-jSgupP sc-gKsewC eRydby jJYlhf gLWgzy"
        color="text.primary"
      >
        Mountain UI library
      </h5>
    </div>
    <div
      className="sc-bdfBwQ sc-dlfnbm  bOlbef"
    >
      <span
        className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  jJYlhf cqWbzA"
      >
        H6 - 1.2rem - bold
      </span>
      <h6
        className="sc-bdfBwQ sc-jSgupP sc-gKsewC eRydby jJYlhf dqOmkc"
        color="text.primary"
      >
        Mountain UI library
      </h6>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Typography/Paragraph Paragraph 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm sc-hKgILt iUmXRz bOlbef"
>
  <p
    className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ sc-fubCfw  jJYlhf"
  >
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
  </p>
</div>
`;

exports[`Storyshots Atoms/Typography/Text Text 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm sc-hKgILt iUmXRz bOlbef"
>
  <span
    className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ  jJYlhf"
  >
    Mountain UI library
  </span>
</div>
`;

exports[`Storyshots Molecules/Code Basic 1`] = `
<div
  className="sc-bdfBwQ sc-dlfnbm sc-hKgILt iUmXRz bOlbef"
>
  <div
    className="sc-bdfBwQ sc-dlfnbm sc-pFZIQ  bOlbef lcnMsL"
  >
    <ul
      className="sc-kEjbxe gaaQzP"
    >
      <li
        className="sc-iqHYGH jjEAh"
      >
        jsx
      </li>
      <li
        className="sc-crrsfI jnpcnn"
      />
      <li
        className="sc-iqHYGH jjEAh"
      >
        copy
      </li>
    </ul>
    <pre
      className="sc-bdfBwQ sc-jSgupP sc-iBPRYJ sc-jrAGrp fUAjbO jJYlhf fGwTqE"
      overflow="overlay"
      tabIndex={0}
    >
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &lt;
        </span>
        <span
          className="token tag class-name"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          Highlight
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag spread punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token tag spread punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          ...
        </span>
        <span
          className="token tag spread attr-value"
          style={
            Object {
              "color": "#728fcb",
            }
          }
        >
          defaultProps
        </span>
        <span
          className="token tag spread punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          code
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          children
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          language
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          language
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
            
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          (
        </span>
        <span
          className="token parameter punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token parameter"
        >
           tokens
        </span>
        <span
          className="token parameter punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          ,
        </span>
        <span
          className="token parameter"
        >
           getLineProps
        </span>
        <span
          className="token parameter punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          ,
        </span>
        <span
          className="token parameter"
        >
           getTokenProps 
        </span>
        <span
          className="token parameter punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          )
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token operator"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          =&gt;
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          (
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
              
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &lt;
        </span>
        <span
          className="token tag class-name"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          Box
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          position
        </span>
        <span
          className="token tag attr-value punctuation attr-equals"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag attr-value"
          style={
            Object {
              "color": "#728fcb",
            }
          }
        >
          relative
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
                
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &lt;
        </span>
        <span
          className="token tag class-name"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          SyntaxLabel
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          strong
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          color
        </span>
        <span
          className="token tag attr-value punctuation attr-equals"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag attr-value"
          style={
            Object {
              "color": "#728fcb",
            }
          }
        >
          light
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          position
        </span>
        <span
          className="token tag attr-value punctuation attr-equals"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag attr-value"
          style={
            Object {
              "color": "#728fcb",
            }
          }
        >
          absolute
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          top
        </span>
        <span
          className="token tag attr-value punctuation attr-equals"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag attr-value"
          style={
            Object {
              "color": "#728fcb",
            }
          }
        >
          -2rem
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          right
        </span>
        <span
          className="token tag attr-value punctuation attr-equals"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag attr-value"
          style={
            Object {
              "color": "#728fcb",
            }
          }
        >
          1.5rem
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          bg
        </span>
        <span
          className="token tag attr-value punctuation attr-equals"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag attr-value"
          style={
            Object {
              "color": "#728fcb",
            }
          }
        >
          dark
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          padding
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript number"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          2
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          borderTopLeftRadius
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript number"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          2
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          borderTopRightRadius
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript number"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          2
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token plain"
        >
          language
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="token tag class-name"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          SyntaxLabel
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
                
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &lt;
        </span>
        <span
          className="token tag class-name"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          Pre
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          as
        </span>
        <span
          className="token tag attr-value punctuation attr-equals"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag attr-value"
          style={
            Object {
              "color": "#728fcb",
            }
          }
        >
          pre
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          padding
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript number"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          4
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          borderRadius
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript number"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          4
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          bg
        </span>
        <span
          className="token tag attr-value punctuation attr-equals"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag attr-value"
          style={
            Object {
              "color": "#728fcb",
            }
          }
        >
          dark
        </span>
        <span
          className="token tag attr-value punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          "
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag attr-name"
          style={
            Object {
              "color": "#896724",
            }
          }
        >
          boxShadow
        </span>
        <span
          className="token tag script language-javascript script-punctuation punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          =
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token tag script language-javascript number"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          3
        </span>
        <span
          className="token tag script language-javascript punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
           
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
                  
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token plain"
        >
          tokens
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          .
        </span>
        <span
          className="token function"
          style={
            Object {
              "color": "#b29762",
            }
          }
        >
          map
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          (
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          (
        </span>
        <span
          className="token parameter"
        >
          line
        </span>
        <span
          className="token parameter punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          ,
        </span>
        <span
          className="token parameter"
        >
           i
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          )
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token operator"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          =&gt;
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          (
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
                    
        </span>
        <span
          className="token operator"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          &lt;
        </span>
        <span
          className="token plain"
        >
          div key
        </span>
        <span
          className="token operator"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          =
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token plain"
        >
          i
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token operator"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          ...
        </span>
        <span
          className="token function"
          style={
            Object {
              "color": "#b29762",
            }
          }
        >
          getLineProps
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          (
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token plain"
        >
           line
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          ,
        </span>
        <span
          className="token plain"
        >
           key
        </span>
        <span
          className="token operator"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          :
        </span>
        <span
          className="token plain"
        >
           i 
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          )
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token operator"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
                      
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token plain"
        >
          line
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          .
        </span>
        <span
          className="token function"
          style={
            Object {
              "color": "#b29762",
            }
          }
        >
          map
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          (
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          (
        </span>
        <span
          className="token parameter"
        >
          token
        </span>
        <span
          className="token parameter punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          ,
        </span>
        <span
          className="token parameter"
        >
           key
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          )
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token operator"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          =&gt;
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          (
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
                        
        </span>
        <span
          className="token operator"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          &lt;
        </span>
        <span
          className="token plain"
        >
          Text key
        </span>
        <span
          className="token operator"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          =
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token plain"
        >
          key
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token operator"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          ...
        </span>
        <span
          className="token function"
          style={
            Object {
              "color": "#b29762",
            }
          }
        >
          getTokenProps
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          (
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token plain"
        >
           token
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          ,
        </span>
        <span
          className="token plain"
        >
           key 
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          )
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          {
        </span>
        <span
          className="token operator"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          ...
        </span>
        <span
          className="token plain"
        >
          props
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token plain"
        >
           
        </span>
        <span
          className="token operator"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          /
        </span>
        <span
          className="token operator"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
                      
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          )
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          )
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
                    
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="token tag"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          div
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
                  
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          )
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          )
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
                
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="token tag class-name"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          Pre
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
              
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="token tag class-name"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          Box
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &gt;
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
            
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          )
        </span>
        <span
          className="token punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          }
        </span>
        <span
          className="token plain"
        >
          
        </span>
      </div>
      <div
        className="token-line"
        style={
          Object {
            "backgroundColor": null,
            "color": "#728fcb",
          }
        }
      >
        <span
          className="token plain"
        >
          
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="token tag class-name"
          style={
            Object {
              "color": "#063289",
            }
          }
        >
          Highlight
        </span>
        <span
          className="token tag punctuation"
          style={
            Object {
              "color": "#b6ad9a",
            }
          }
        >
          &gt;
        </span>
      </div>
    </pre>
  </div>
</div>
`;
